# nordic

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
src/nordic/: __init__.py  gfactor.py  patch_utils.py  phase_correction.py  thr_estimation.py  utils.py
