[metadata]
# ensure all files under src are included
package_dir=
    =src
packages=find:

[options]
packages=find:
install_requires =
   # List your project dependencies here
   # e.g., requests >= 2.25.1
python_requires = >=3.6

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    your-command = your_package_name.module:function
